# TP_vision_por_computadora_2

./: .gitattributes  .gitignore  README.md  TP_VPC2.ipynb  classification1.ipynb  classification2.ipynb  classification3.ipynb  pyproject.toml  requirements.txt  segmentation.ipynb
evaluation/: metricas_por_clase.csv
extra/figures/: tradeoffs.csv
extra/results/checkpoints/: best_overall.pth  fold_2_best.pth  fold_3_best.pth  fold_4_best.pth
extra/src/: 0-analisis.ipynb  03_evaluacion_fixed.ipynb
extra/src/.ipynb_checkpoints/: 03_evaluacion_fixed-checkpoint.ipynb
figures/: tabla_principal.csv
paper/: Paper.aux  Paper.bbl  Paper.blg  Paper.out  Paper.tex  presentacion_OCT.key  presentacion_OCT.pptx  references.bib
results/: all_results.json  unetpp_v1_kaggle_8c.csv
results/checkpoints/: fold_1_best.pth  fold_5_best.pth
retina-oct-demo-app/: README.md  app.py  config.py  pyproject.toml  requirements.txt
retina-oct-demo-app/models/: __init__.py  classifier.py  pipeline.py  segmentation.py  segmentation_unet.py  segmentation_unetplusplus.py
retina-oct-demo-app/utils/: __init__.py  visualization.py
retina-oct-demo-app/weights/: modelo1_resnet50.pth  modelo2_seg_resnet50.pth  retina_sam_adapter.pth
src/: 01-train-unetpp.ipynb  04_resultados.ipynb  05_visualizacion.ipynb
src/.ipynb_checkpoints/: 0-analisis-checkpoint.ipynb  01-train-unetpp-checkpoint.ipynb  04_resultados-checkpoint.ipynb  05_visualizacion-checkpoint.ipynb
