[project]
name = "tp-vision-por-computadora-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "executing==2.2.1",
    "fonttools==4.62.1",
    "ipykernel==7.2.0",
    "ipython==9.12.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kagglehub>=1.0.0",
    "kiwisolver==1.5.0",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "numpy==2.4.3",
    "opencv-python>=4.13.0.92",
    "packaging==26.0",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "segmentation-models-pytorch>=0.5.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "torch==2.11.0",
    "tornado==6.5.5",
    "traitlets==5.14.3",
    "wcwidth==0.6.0",
    "retina-oct-demo-app",
]

[tool.uv.workspace]
members = ["retina-oct-demo-app"]

[tool.uv.sources]
retina-oct-demo-app = { workspace = true }
